tests/miz/pass/types/pass_type_elaboration_local_mode_two_edge_chain_expansion_001.miz
definition
  mode BaseModeDef: BaseMode is set;
end;

definition
  mode MiddleModeDef: MiddleMode is BaseMode;
end;

definition
  mode OuterModeDef: OuterMode is MiddleMode;
end;

reserve z for OuterMode;
