tests/miz/fail/types/fail_type_elaboration_attributed_local_mode_attributed_rhs_evidence_gap_001.miz
definition
  let x be set;
  attr MarkedDef: x is marked means thesis;
end;

definition
  mode MarkedModeDef: MarkedMode is marked set;
end;

reserve z for marked MarkedMode;
